--- a/.github/workflows/Test-with-AI.yml
+++ b/.github/workflows/Test-with-AI.yml
@@ -26,13 +26,11 @@ jobs:
       run: sudo apt-get update && sudo apt-get install -y git curl
 
     - name: Clone Armbian build repository
-      run: git clone --depth=1 --branch=main https://github.com/armbian/build
-
-    - name: Change to build directory
-      run: cd build
+      run: git clone --depth=1 --branch=main https://github.com/armbian/build 
 
     - name: Compile Armbian image
       run: |
+        cd build
         ./compile.sh BOARD=nanopi-r3s BRANCH=edge RELEASE=jammy BUILD_MINIMAL=no BUILD_DESKTOP=no KERNEL_CONFIGURE=no
 
     - name: Save compiled image
