--- a/.github/workflows/Jammy-with-AI.yml
+++ b/.github/workflows/Jammy-with-AI.yml
@@ -1,12 +1,7 @@
-name: Build Jammy with Copilot
+name: Build Jammy with AI
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
   build:
