--- a/.github/workflows/Bookworm-with-AI.yml
+++ b/.github/workflows/Bookworm-with-AI.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Compile Armbian image
       run: |
         cd build
-        ./compile.sh BOARD=nanopi-r3s BRANCH=edge RELEASE=bookworm BUILD_MINIMAL=yes BUILD_DESKTOP=no KERNEL_CONFIGURE=no
+        ./compile.sh BOARD=nanopi-r3s BRANCH=current RELEASE=bookworm BUILD_MINIMAL=yes BUILD_DESKTOP=no KERNEL_CONFIGURE=no
 
     - name: Compress compiled image
       run: |
